--- a/main.css
+++ b/main.css
@@ -16,18 +16,21 @@ html, body {
     display: flex;
     flex-direction: column;
     align-content: center;
+    background-color: darkgray;
+    padding: 5px;
 }
 
 header {
     text-align: center;
     font-size: 0.5em;
-    margin:0;
-    padding:0;
 }
 
 .display-container {
     display: flex;
     background-color: lightgray;
+    align-items: center;
+    min-height: 1.2em;
+    margin: 5px 0px;
 }
 
 .display {
